--- a/styles/main.less
+++ b/styles/main.less
@@ -28,3 +28,8 @@
 @import "headroom/brand";
 @import "headroom/header-footer";
 @import "headroom/headroom";
+
+#demo-input {
+  outline: none;
+  width: 50%;
+}
